tests/fixtures/read_file_missing.bash.stderr
cat: does_not_exist_xyz.txt: No such file or directory
Error in tests/fixtures/read_file_missing.sh2:3:5
Error in tests/fixtures/read_file_missing.sh2:3:5
Error in tests/fixtures/read_file_missing.sh2:3:5
Error in tests/fixtures/read_file_missing.sh2:3:5
