tests/fixtures/read_file_missing.sh2

func main() {
    let s = read_file("does_not_exist_xyz.txt")
    if s == "" {
        print("empty")
    } else {
        print("not empty")
    }
}
